# DF-Tileset-Assembler

./: CMakeLists.txt  generate_version.cmake  resources.qrc
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CP437.cpp  CP437.h  ConfigurationWidget.cpp  ConfigurationWidget.h  FileLineReader.cpp  FileLineReader.h  LayerComboBox.cpp  LayerComboBox.h  LogWindow.cpp  LogWindow.h  LogWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Palette.cpp  Palette.h  ParseError.cpp  ParseError.h  PreviewWidget.cpp  PreviewWidget.h  TileSubset.cpp  TileSubset.h  TilemapInfo.cpp  TilemapInfo.h  Tileset.cpp  Tileset.h  Version.h.in  main.cpp
